--- a/crm/package.json
+++ b/crm/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@tgrx/getcontrasttext": "^1.0.1",
+    "axios": "^0.19.2",
     "date-fns": "^2.9.0",
     "express": "^4.17.1",
     "next": "^9.2.1",
     "react": "^16.12.0",
+    "react-axios": "^2.0.3",
     "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
