--- a/crm/package.json
+++ b/crm/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.19.2",
     "date-fns": "^2.9.0",
     "express": "^4.17.1",
+    "material-table": "^1.57.2",
+    "mui-datatables": "^2.14.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
