--- a/crm/package.json
+++ b/crm/package.json
@@ -30,7 +30,7 @@
     "eject": "react-scripts eject",
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3010"
   },
   "eslintConfig": {
     "extends": "react-app"
