--- a/crm/package.json
+++ b/crm/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "recharts": "^2.0.0-beta.2",
     "styled-components": "^5.0.0",
     "suneditor-react": "^2.6.7"
   },
