--- a/crm/package.json
+++ b/crm/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "material-table": "^1.57.2",
     "material-ui-chip-input": "^2.0.0-beta.2",
+    "material-ui-phone-number": "git+https://github.com/braxtonex/material-ui-phone-number.git#fix",
     "mui-datatables": "^2.14.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
